product build eform anotations [2]